tests/bad_programs/syntax_errors/not_a_type.notc
int main () {
    not_a_type x = 54;
    return 0;
}
